fixed row-gap

--- a/src/blocks/form/form.css
+++ b/src/blocks/form/form.css
@@ -6,8 +6,5 @@
     margin: 0 auto;
 }
 
-.form_type_auth {
-    row-gap: 30px;
-}
 
 
